// Copyright 2021 The Rode Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package build_collector.v1alpha1;

option go_package = "github.com/rode/collector-build/proto/v1alpha1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service BuildCollector {
  rpc CreateBuild(CreateBuildRequest) returns (CreateBuildResponse) {
    option (google.api.http) = {
      post: "/v1alpha1/builds"
      body: "*"
    };
  }
  rpc UpdateBuildArtifacts(UpdateBuildArtifactsRequest) returns (UpdateBuildArtifactsResponse) {
    option (google.api.http) = {
      put: "/v1alpha1/builds"
      body: "*"
    };
  }
}

message Artifact {
  string id = 1;
  repeated string names = 2;
}

message CreateBuildRequest {
  // The Git repository holding the source code for the artifact(s)
  string repository = 1;
  // Any generated outputs of the build
  repeated Artifact artifacts = 2;
  // Commit SHA
  string commit_id = 3;
  // source of the build
  string provenanceId = 4;
  // link to the build logs
  string logsUri = 5;
  // build creator
  string creator = 6;
  // time the build began
  google.protobuf.Timestamp build_start = 7;
  // timestamp of when the build ended
  google.protobuf.Timestamp build_end = 8;
}

message CreateBuildResponse {
  // Unique id of the new build occurrence
  string build_occurrence_id = 1;
}

message UpdateBuildArtifactsRequest {
  string existing_artifact_id = 1;
  Artifact new_artifact = 2;
}

message UpdateBuildArtifactsResponse {
  // Unique id of the updated build occurrence
  string build_occurrence_id = 1;
}
